# gsd-2

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md
.gsd/milestones/M004/: M004-CONTEXT.md  M004-ROADMAP.md
docs/: README.md  architecture.md  auto-mode.md  commands.md  configuration.md  cost-management.md  getting-started.md  git-strategy.md  skills.md  token-optimization.md  troubleshooting.md  web-interface.md  working-in-teams.md
native/crates/ast/src/: ast.rs  glob_util.rs  lib.rs
native/crates/engine/: Cargo.toml
native/crates/engine/src/: ast.rs  lib.rs
native/npm/darwin-arm64/: package.json
native/npm/darwin-x64/: package.json
native/npm/linux-arm64-gnu/: package.json
native/npm/linux-x64-gnu/: package.json
native/npm/win32-x64-msvc/: package.json
pkg/: package.json
scripts/: postinstall.js  verify-s03.sh  verify-s04.sh
src/: cli.ts  loader.ts  resource-loader.ts  update-check.ts  wizard.ts
src/resources/: GSD-WORKFLOW.md
src/resources/extensions/: ask-user-questions.ts  get-secrets-from-user.ts
src/resources/extensions/async-jobs/: async-bash-tool.ts  await-tool.ts  index.ts
src/resources/extensions/bg-shell/: index.ts  output-formatter.ts  overlay.ts  process-manager.ts  (+2 more)
src/tests/: app-smoke.test.ts  web-diagnostics-contract.test.ts
src/web/: forensics-service.ts
(+196 files in other folders)
