[package]
name = "gsd-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "N-API native addon for GSD — exposes high-performance Rust modules to Node.js"

[lib]
crate-type = ["cdylib"]

[dependencies]
gsd-ast = { path = "../ast" }
gsd-grep = { path = "../grep" }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
